unit action build out. add get player.
